@@ -77,4 +77,5 @@
 -(BOOL)canGoForward;
 -(BOOL)canGoBack;
 -(void)setArticleToPreserve:(Article *)article;
+-(void)createArticleSummaries;
 @end
